--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "notp": "^2.0.3",
     "nthen": "0.1.8",
     "openid-client": "^5.4.2",
+    "@node-saml/node-saml": "^4.0.5",
     "prompt-confirm": "^2.0.4",
     "pull-stream": "^3.6.1",
     "saferphore": "0.0.1",
