--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chainpad-crypto": "^0.2.5",
     "chainpad-server": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "body-parser": "^1.20.2",
     "express": "~4.18.2",
     "fs-extra": "^7.0.0",
     "get-folder-size": "^2.0.1",
