Edit for consistency

--- a/docs/example.httpd.conf
+++ b/docs/example.httpd.conf
@@ -12,7 +12,7 @@ SSLProxyCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:EC
 SSLHonorCipherOrder off
 SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
 SSLProxyProtocol all -SSLv3 -TLSv1 -TLSv1.1
-SSLSessionCache "shmcb:/usr/local/apache/logs/ssl_scache(512000)"
+SSLSessionCache "shmcb:logs/ssl_scache(512000)"
 SSLSessionCacheTimeout 86400
 SSLSessionTickets off
 SSLUseStapling on
