--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ customization
 .*.swp
 *.db
 /customize/
-/lib/plugins
 customize
 messages.log
 .DS_Store
@@ -29,3 +28,5 @@ logs/
 privileged.conf
 config/config.js
 config/sso.js
+lib/plugins/*
+!lib/plugins/README.md
