--- a/docs/example.httpd.conf
+++ b/docs/example.httpd.conf
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 XWiki CryptPad Team <contact@cryptpad.org> and contributors
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 #   This file is included strictly as an example of how Apache httpd can be
 #   configured to work with CryptPad. If you are using CryptPad in production
 #   and require professional support please contact sales@cryptpad.fr
