Fix nginx advenced config issue

--- a/docs/example-advanced.nginx.conf
+++ b/docs/example-advanced.nginx.conf
@@ -14,6 +14,8 @@ server {
 
     # Let's Encrypt webroot
     include letsencrypt-webroot;
+    # Include mime.types to be able to support .mjs files (see "types" below)
+    include mime.types;
 
     # CryptPad serves static assets over these two domains.
     # `main_domain` is what users will enter in their address bar.
