--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cryptpad",
-  "description": "realtime collaborative visual editor with zero knowlege server",
+  "description": "realtime collaborative visual editor with zero knowledge server",
   "version": "5.7.0",
   "license": "AGPL-3.0+",
   "repository": {
