Remove OnlyOffice from docker image and install on startup
https://github.com/cryptpad/cryptpad/issues/1416

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,10 @@ docker-compose.yml
 traefik2.yml
 Dockerfile*
 *.png
+/onlyoffice-builds.git/
+/www/common/onlyoffice/dist/
+blob
+block
+customize
+data
+datastore
