--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,5 @@ lib/plugins/*
 !lib/plugins/README.md
 www/common/onlyoffice/v*
 
-/onlyoffice-builds.git/
 /www/common/onlyoffice/dist/
-/install-onlyoffice-docker.key
-/onlyoffice-dist/
-/onlyoffice.properties
+/onlyoffice-conf/
