Add link to OnlyOffice license to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,11 @@ services:
       - CPAD_SANDBOX_DOMAIN=https://your-sandbox-domain.com
       - CPAD_CONF=/cryptpad/config/config.js
 
-      # Uncomment the next line, when you want to use OnlyOffice on
-      # your installation. TODO add link to license
+      # Uncomment the next line, if you want to use OnlyOffice on
+      # your installation.
+      #
+      # Read and accept this before doing this:
+      # https://github.com/ONLYOFFICE/web-apps/blob/master/LICENSE.txt
       # - CPAD_INSTALL_ONLYOFFICE=yes
 
     volumes:
