--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,7 @@ www/components/
 www/bower_components/
 www/common/onlyoffice/dist
 www/common/onlyoffice/x2t
+onlyoffice-dist/
 
 www/scratch
 www/accounts
