--- a/docs/example-advanced.nginx.conf
+++ b/docs/example-advanced.nginx.conf
@@ -9,11 +9,13 @@
 #   in production and require professional support please contact sales@cryptpad.fr
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
 
     # Let's Encrypt webroot
     include letsencrypt-webroot;
+
     # Include mime.types to be able to support .mjs files (see "types" below)
     include mime.types;
 
