--- a/docs/example.nginx.conf
+++ b/docs/example.nginx.conf
@@ -9,8 +9,9 @@
 #   in production and require professional support please contact sales@cryptpad.fr
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
 
     # Let's Encrypt webroot
     include letsencrypt-webroot;
