--- a/docs/example.httpd.conf
+++ b/docs/example.httpd.conf
@@ -40,7 +40,7 @@ SSLStaplingCache "shmcb:logs/ssl_stapling(32768)"
     ProxyPassReverse http://localhost:3000/
   </Location>
   <Location "/cryptpad_websocket">
-    ProxyPassMatch http://localhost:3003/ upgrade=websocket
+    ProxyPass http://localhost:3003/ upgrade=websocket
     ProxyPassReverse http://localhost:3003/
   </Location>
 </VirtualHost>
