revert name change who doesn't allow capital letters

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CryptPad",
+  "name": "cryptpad",
   "description": "a collaborative office suite that is end-to-end encrypted and open-source",
   "version": "2024.6.0",
   "license": "AGPL-3.0+",
