Allow docker containers to download plugins
It allows automatic installation of plugins for docker.

There can be multiple plugins, with one variable each. As long as the
environment variable starts with "CPAD_PLUGIN_", the suffix will then
be used to define the plugin git directory in lib/plugins/.

It also allows to pick which commit, tag or branch we want to use, by
appending it to the git URL, separated by a '|' for now.

If the commit/tag/branch part is ommited, the default is to use the
git's default branch. The repository is synced at every restart, so it's
probably better to specify which tag or commit hash we want, if this is
a plugin with a lot of activity.

The end result is commented in the docker-compose.yml to avoid confusing
people who use docker and don't need plugins.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - CPAD_MAIN_DOMAIN=https://your-main-domain.com
       - CPAD_SANDBOX_DOMAIN=https://your-sandbox-domain.com
       - CPAD_CONF=/cryptpad/config/config.js
+      # Add SSO plugin from git's "main" branch, but can be a commit hash or a tag
+      #- CPAD_PLUGIN_SSO=https://github.com/cryptpad/sso.git|main
 
       # Read and accept the license before uncommenting the following line:
       # https://github.com/ONLYOFFICE/web-apps/blob/master/LICENSE.txt
@@ -23,6 +25,8 @@ services:
       - ./customize:/cryptpad/customize
       - ./data/data:/cryptpad/data
       - ./data/files:/cryptpad/datastore
+      # Useful if you want to store plugins and avoid downloading them all the time
+      #- ./data/plugins:/cryptpad/lib/plugins
       - ./onlyoffice-dist:/cryptpad/www/common/onlyoffice/dist
       - ./onlyoffice-conf:/cryptpad/onlyoffice-conf
 
