Caddyfile: CryptPad WebSocket

--- a/docs/example-advanced.caddy.conf
+++ b/docs/example-advanced.caddy.conf
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
-#   This file is included strictly as an example of how Nginx can be configured
+#   This file is included strictly as an example of how Caddy can be configured
 #   to work with CryptPad. This example WILL NOT WORK AS IS. For best results,
 #   compare the sections of this configuration file against a working CryptPad
 #   installation (http server by the Nodejs process). If you are using CryptPad
@@ -68,11 +68,11 @@ your-sandbox-domain.com:443 {
 		connectSrc "'self' https://your-main-domain.com blob: wss://api.your-main-domain.com https://your-sandbox-domain.com"
 		
 		# Fonts can be loaded from data-URLs or the main domain.
-		fontSrc    "'self' data: https://your-main-domain.com"
+		fontSrc	"'self' data: https://your-main-domain.com"
 		
 		# Images can be loaded from anywhere, though we'd like to deprecate this as it allows
 		# the use of images for tracking.
-		imgSrc     "'self' data: blob: https://your-main-domain.com"
+		imgSrc	 "'self' data: blob: https://your-main-domain.com"
 		
 		# frame-src specifies valid sources for nested browsing contexts.
 		# This prevents loading any iframes from anywhere other than the sandbox domain.
@@ -126,6 +126,23 @@ your-sandbox-domain.com:443 {
 		path "*.mjs"
 	}
 	header @fileModuleJS Content-Type "application/javascript"
+
+	# The Node.js process can handle all traffic, whether accessed over websocket or as static assets.
+	# We prefer to serve static content from Caddy directly, and to leave the API server to handle the
+	# the dynamic content that only it can manage. This is primarily for optimization.
+	handle /cryptpad_websocket/* {
+		reverse_proxy * {
+			to 127.0.0.1:3003
+			header_up Host "{host}"
+			header_up X-Real-IP "{remote_host}"
+
+			# Caddy supports WebSockets directly. No additional headers are needed.
+
+			# Force Caddy to accept `X-Forwarded-For` and other origin headers.
+			# Modify the line below if you want to restrict the scope of direct downstream sending these headers.
+			trusted_proxies 0.0.0.0/0 ::/0
+		}
+	}
 	
 	# Enable file serving
 	file_server {
