Caddyfile: Prevent COxP header duplication

--- a/docs/example-advanced.caddy.conf
+++ b/docs/example-advanced.caddy.conf
@@ -49,8 +49,8 @@ your-sandbox-domain.com:443 {
 	header Permissions-Policy "interest-cohort=()"
 	
 	# Enable SharedArrayBuffer in Firefox (for .xlsx export)
-	header Cross-Origin-Resource-Policy "cross-origin"
-	header Cross-Origin-Embedder-Policy "require-corp"
+	header ?Cross-Origin-Resource-Policy "cross-origin"
+	header ?Cross-Origin-Embedder-Policy "require-corp"
 	
 	# Specify the relative path to root of your custom error page.
 	# This error page won't only be served for 404 errors.
