Caddyfile: Corrected CORS preflight response

--- a/docs/example-advanced.caddy.conf
+++ b/docs/example-advanced.caddy.conf
@@ -208,6 +208,8 @@ your-sandbox-domain.com:443 {
 	handle @blobsAndBlocks {
 		@corsPreflight {
 			method OPTIONS
+		}
+		handle @corsPreflight {
 			header Access-Control-Allow-Origin "https://your-sandbox-domain.com"
 			header Access-Control-Allow-Credentials "true"
 			header Access-Control-Allow-Methods "GET, POST, OPTIONS"
