--- a/docs/community/example-advanced.caddy.conf
+++ b/docs/community/example-advanced.caddy.conf
@@ -6,7 +6,7 @@
 #   to work with CryptPad. This example WILL NOT WORK AS IS. For best results,
 #   compare the sections of this configuration file against a working CryptPad
 #   installation (http server by the Nodejs process). If you are using CryptPad
-#   in production and require professional support please contact sales@cryptpad.fr
+#   in production and require professional support please contact sales@cryptpad.org
 
 (trustedProxies) {
 	# Force Caddy to accept `X-Forwarded-For` and other origin headers.
