--- a/package.json
+++ b/package.json
@@ -67,10 +67,20 @@
     "x2js": "^3.4.4"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-compat": "^4.2.0",
+    "rollup": "^4.24.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "stylelint": "^16.9.0",
-    "stylelint-config-standard-less": "^3.0.1"
+    "stylelint-config-standard-less": "^3.0.1",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2"
   },
   "overrides": {
     "minimist": "~1.2.3",
@@ -97,7 +107,8 @@
     "evict-inactive": "node scripts/evict-inactive.js",
     "build": "node scripts/build.js",
     "clear": "node scripts/clear.js",
-    "installtoken": "node scripts/install.js"
+    "installtoken": "node scripts/install.js",
+    "api": "rollup -c"
   },
   "browserslist": [
     "> 0.5%, last 2 versions, Firefox ESR, not dead, not op_mini all"
