Convert missing modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
         "moduleResolution": "node",
         "outDir": "./_build"
     },
-    "include": ["_src/**/*"]
+    "include": ["src/**/*"]
 }
 
