Fix trailing slash
Returns 404 when using exact match without slash

--- a/docs/example-advanced.nginx.conf
+++ b/docs/example-advanced.nginx.conf
@@ -249,7 +249,7 @@ server {
         add_header Cross-Origin-Embedder-Policy require-corp;
     }
 
-    location = /extensions.js {
+    location = /extensions.js/ {
         proxy_pass http://localhost:3000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
