Replace common files with their umd version

--- a/.eslintignore
+++ b/.eslintignore
@@ -38,3 +38,7 @@ www/debug/chainpad.dist.js
 www/pad/mathjax/
 www/code/mermaid*.js
 www/code/orgmode.js
+
+www/common/worker.bundle.js
+src/tweetnacl/
+_build/
