Squashed 'src/tweetnacl/' changes from 9b72d4f64..3b94e1675
3b94e1675 Remove dev dependencies (no need to build)

git-subtree-dir: src/tweetnacl
git-subtree-split: 3b94e16757522cd19ac396fdcfc71172c8500a9e

--- a/package.json
+++ b/package.json
@@ -53,13 +53,5 @@
   "bugs": {
     "url": "https://github.com/dchest/tweetnacl-js/issues"
   },
-  "homepage": "https://dchest.github.io/tweetnacl-js",
-  "devDependencies": {
-    "browserify": "4.x.x",
-    "faucet": "0.x.x",
-    "tap-browser-color": "0.x.x",
-    "tape": "2.x.x",
-    "testling": "1.x.x",
-    "uglify-js": "2.x.x"
-  }
+  "homepage": "https://dchest.github.io/tweetnacl-js"
 }
