Add spellchecker CSP to advanced nginx config #1900

--- a/docs/example-advanced.nginx.conf
+++ b/docs/example-advanced.nginx.conf
@@ -169,6 +169,7 @@ server {
     # they unfortunately still require exceptions to the sandboxing to work correctly.
     if ($uri ~ ^/(?:sheet|doc|presentation)/inner.html) { set $unsafe 1; }
     if ($uri ~ ^/common/onlyoffice/.*/.*\.html) { set $unsafe 1; }
+    if ($uri ~ ^/common/onlyoffice/dist/.*/sdkjs/common/spell/spell/spell.js.*$) { set $unsafe 1; }
 
     # everything except the sandbox domain is a privileged scope, as they might be used to handle keys
     if ($host != $sandbox_domain) { set $unsafe 0; }
