Fix bounce issue with Safari

--- a/docs/example-advanced.nginx.conf
+++ b/docs/example-advanced.nginx.conf
@@ -104,6 +104,7 @@ server {
     # Enable SharedArrayBuffer in Firefox (for .xlsx export)
     add_header Cross-Origin-Resource-Policy cross-origin;
     add_header Cross-Origin-Embedder-Policy require-corp;
+    add_header Referrer-Policy same-origin;
 
     # Insert the path to your CryptPad repository root here
     root /home/cryptpad/cryptpad;
