--- a/docs/community/example.httpd.conf
+++ b/docs/community/example.httpd.conf
@@ -145,8 +145,8 @@ SSLStaplingCache "shmcb:logs/ssl_stapling(32768)"
   Header set X-Content-Type-Options nosniff
   Header set Access-Control-Allow-Credentials true
   Header set Permissions-Policy "interest-cohort=()"
-  Header set Cross-Origin-Resource-Policy "cross-origin"
-  Header set Cross-Origin-Embedder-Policy "require-corp"
+  Header always set Cross-Origin-Resource-Policy "cross-origin"
+  Header always set Cross-Origin-Embedder-Policy "require-corp"
 
   # Various RewriteRules below
 
