--- a/.github/workflows/test-trigger.yml
+++ b/.github/workflows/test-trigger.yml
@@ -6,10 +6,11 @@ name: Trigger E2E tests
 
 on:
   push:
-    branches: [ staging ]
+    branches: [ staging, 2025.9-rc  ]
 
 jobs:
-  trigger:
+  trigger-staging:
+    if: github.ref_name == 'staging'
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +18,25 @@ jobs:
         run: |
           repo_owner="cryptpad" 
           repo_name="e2e-test-suite"  
-          event_type="trigger-e2e-tests" 
+          event_type="trigger-e2e-tests-staging" 
+  
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.TEST_PAT }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/cryptpad/e2e-test-suite/dispatches \
+            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"service\": \"$service\", \"version\": \"$version\", \"unit\": false, \"integration\": true}}"
+  trigger-staging:
+    if: github.ref_name == '2025.9-rc'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Trigger E2E test run - local and remote
+        run: |
+          repo_owner="cryptpad" 
+          repo_name="e2e-test-suite"  
+          event_type="trigger-e2e-tests-rc" 
   
           curl -L \
             -X POST \
