--- a/.github/workflows/test-trigger.yml
+++ b/.github/workflows/test-trigger.yml
@@ -27,7 +27,7 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/cryptpad/e2e-test-suite/dispatches \
             -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"service\": \"$service\", \"version\": \"$version\", \"unit\": false, \"integration\": true}}"
-  trigger-staging:
+  trigger-rc:
     if: github.ref_name == '2025.9-rc'
     runs-on: ubuntu-latest
 
