--- a/.github/workflows/test-trigger.yml
+++ b/.github/workflows/test-trigger.yml
@@ -6,19 +6,27 @@ name: Trigger E2E tests
 
 on:
   push:
-    branches: [ staging, 2025.9-rc  ]
+    branches: [ staging, 2025.9-rc, 2025.9-test ]
 
 jobs:
-  trigger-staging:
+  trigger-tests:
     if: github.ref_name == 'staging'
     runs-on: ubuntu-latest
-
     steps:
-      - name: Trigger E2E test run - local and remote
+      - name: Trigger E2E test run (local) - staging
         run: |
+          branch="${GITHUB_REF_NAME}"
+
+          if [ "$branch" = "staging" ]; then
+            event_type="trigger-e2e-tests-staging"
+          elif [ "$branch" = "2025.9-rc" ]; then
+            event_type="trigger-e2e-tests-rc"
+          elif [ "$branch" = "2025.9-test" ]; then
+            event_type="trigger-e2e-tests-test"
+          fi 
+
           repo_owner="cryptpad" 
           repo_name="e2e-test-suite"  
-          event_type="trigger-e2e-tests-staging" 
   
           curl -L \
             -X POST \
@@ -27,21 +35,7 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/cryptpad/e2e-test-suite/dispatches \
             -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"service\": \"$service\", \"version\": \"$version\", \"unit\": false, \"integration\": true}}"
-  trigger-rc:
-    if: github.ref_name == '2025.9-rc'
-    runs-on: ubuntu-latest
 
-    steps:
-      - name: Trigger E2E test run - local and remote
-        run: |
-          repo_owner="cryptpad" 
-          repo_name="e2e-test-suite"  
-          event_type="trigger-e2e-tests-rc" 
-  
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.TEST_PAT }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/cryptpad/e2e-test-suite/dispatches \
-            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"service\": \"$service\", \"version\": \"$version\", \"unit\": false, \"integration\": true}}"
+            
+
+
