--- a/.github/workflows/test-trigger.yml
+++ b/.github/workflows/test-trigger.yml
@@ -13,7 +13,7 @@ jobs:
     if: github.ref_name == 'staging'
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger E2E test run (local) - staging
+      - name: Trigger E2E test run (local)
         run: |
           branch="${GITHUB_REF_NAME}"
 
@@ -35,7 +35,5 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/cryptpad/e2e-test-suite/dispatches \
             -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"service\": \"$service\", \"version\": \"$version\", \"unit\": false, \"integration\": true}}"
-
-            
 
 
