Add licensing information for Lucide icons

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -236,3 +236,9 @@ path = "www/common/worker.bundle.min.js"
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2025 XWiki CryptPad Team <contact@cryptpad.org> and contributors"
 SPDX-License-Identifier = "AGPL-3.0-or-later"
+
+[[annotations]]
+path = "customize.dist/lucide.js"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "Cole Bemis 2013-2023 as part of Feather, Lucide Contributors 2025"
+SPDX-License-Identifier = "ISC OR MIT"
