--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@
 ---
 services:
   cryptpad:
-    image: "cryptpad/cryptpad:version-2025.6.0"
+    image: "cryptpad/cryptpad:latest"
     hostname: cryptpad
 
     environment:
