fix(docs): Add proxy for sso and metrics plugins
fixes #2042

Signed-off-by: Adrian Nöthlich <git@promasu.tech>

--- a/docs/example-advanced.nginx.conf
+++ b/docs/example-advanced.nginx.conf
@@ -296,6 +296,21 @@ server {
         add_header Cross-Origin-Embedder-Policy require-corp;
     }
 
+    # Extensions are handeled via the server and have to be proxied
+    location ~ ^/(?:sso|metrics)/ {
+        proxy_pass http://localhost:3000;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        # These settings prevent both NGINX and the API server
+        # from setting the same headers and creating duplicates
+        proxy_hide_header Cross-Origin-Resource-Policy;
+        add_header Cross-Origin-Resource-Policy cross-origin;
+        proxy_hide_header Cross-Origin-Embedder-Policy;
+        add_header Cross-Origin-Embedder-Policy require-corp;
+    }
+
     location = /extensions.js/ {
         proxy_pass http://localhost:3000;
         proxy_set_header X-Real-IP $remote_addr;
