Docker: switch to domain examples

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     hostname: cryptpad
 
     environment:
-      - CPAD_HTTP_UNSAFE_ORIGIN=http://sandbox.example.com
-      - CPAD_HTTP_SAFE_ORIGIN=http://main.example.com
+      - CPAD_HTTP_UNSAFE_ORIGIN=https://your-main-domain.com
+      - CPAD_HTTP_SAFE_ORIGIN=https://your-sandbox-domain.com
       - CPAD_HTTP_ADDRESS=0.0.0.0
       - CPAD_HTTP_PORT=3000
       - CPAD_HTTP_SAFE_PORT=3001
